Em 6449 add pact test (#2328)
* add pact tests

* add pact tests

* remove change

* missing class

* checkstyle

* use string type

* enable consumer

* enable provider

* rename provider

* remove line

* rename provider

* undo change

* add tag

* restore directory

* update task

* remove extra lines

* re-add check

* comment out code

* checkstyle

* use old config

* update build.gradle and add docker-pact-broker.yml

* check override

* update annotations

* update annotation

* checkstyle

* specify tag name

* update task

* update annotations

* checkstyle

* update task

* check tests

* update config

* Revert "update config"

This reverts commit aa6b777061a7f3502fe9f0f82c431553b73b2879.

* remove comments

* remove comments

* ignore no pacts

* remove unused var

---------

Co-authored-by: bensternzewi <benster.nzewi@hmcts.net>
Co-authored-by: Ben Nzewi <Benster.nzewi@gmail.com>